add db hash, refactor authorization
